force-app/main/default/objects/ETT_Job_Card__c/ETT_Job_Card__c.object-meta.xml
<CustomObject>
    <description>This is for the initial inspection stage to the final inspection stage.</description>
    <label>Job Card</label>
    <nameField>
        <displayFormat>JC-{0000}</displayFormat>
        <label>Job Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>