force-app/main/default/objects/ETT_Job_Card__c/fields/Buffing_Cuts_Count__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Cuts_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Buffing - Cuts Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>