force-app/main/default/objects/ETT_Job_Card__c/fields/Buffing_Rejection_Supervisor_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Rejection_Supervisor_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Rejection Supervisor Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>