force-app/main/default/objects/ETT_Job_Card__c/fields/Building_Halt_Time__c.field-meta.xml
<CustomField>
    <fullName>Building_Halt_Time__c</fullName>
    <formula>( Now()- Thread_Cut_Section_Cemented_End_Time__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Halt Time(Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>