force-app/main/default/objects/ETT_Job_Card__c/fields/building_Technician__c.field-meta.xml
<CustomField>
    <fullName>building_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>building Technician</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Job Cards (building Technician)</relationshipLabel>
    <relationshipName>Job_Cards6</relationshipName>
    <type>Lookup</type>
</CustomField>