force-app/main/default/objects/ETT_Job_Card__c/fields/Cable_Voccume_Valve_Number__c.field-meta.xml
<CustomField>
    <fullName>Cable_Voccume_Valve_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cable-Voccume Valve Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>