force-app/main/default/objects/ETT_Job_Card__c/fields/Cementing_Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Cementing_Technician_Name__c</fullName>
    <formula>ETT_Cementing_Work_Schedule__r.ETT_Technician__r.FirstName + &quot; &quot; +  ETT_Cementing_Work_Schedule__r.ETT_Technician__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cementing Technician Name</label>
    <type>Text</type>
</CustomField>