force-app/main/default/objects/ETT_Job_Card__c/fields/Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Job Cards</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>