force-app/main/default/objects/ETT_Job_Card__c/fields/Curing_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Curing_Batch_No__c</fullName>
    <description>To identify all the Job card selected in curing stage, it combination dateandtime</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Batch No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>