force-app/main/default/objects/ETT_Job_Card__c/fields/Curing_technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Curing_technician_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing technician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>