force-app/main/default/objects/ETT_Job_Card__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>Tyre_Inventory__r.Party_Type__c</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>