force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buffing</label>
    <type>Checkbox</type>
</CustomField>