force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Check_buffing_template__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Check_buffing_template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buffing Check buffing template</label>
    <type>Checkbox</type>
</CustomField>