force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Cushion_Gum_Position__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Cushion_Gum_Position__c</fullName>
    <label>Buffing Cushion Gum Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>