force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Description__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Remarks</label>
    <type>TextArea</type>
</CustomField>