force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Dust_Collector_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Dust_Collector_Reason__c</fullName>
    <label>Buffing Dust Collector Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance Required</fullName>
            </value>
            <value>
                <fullName>Repair/Fault identified</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>