force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing End Time</label>
    <type>DateTime</type>
</CustomField>