force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_On_Power_Switch__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_On_Power_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buffing On Power Switch</label>
    <type>Checkbox</type>
</CustomField>