force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Powder_Replacement_Required__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Powder_Replacement_Required__c</fullName>
    <label>Buffing Powder Replacement Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>