force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_precured_tread_line__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_precured_tread_line__c</fullName>
    <label>Buffing precured tread line (in mm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>190</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>