force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Rejection_Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Rejection_Manager_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Rejection HOO Remarks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>