force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Started_Dust_Collection__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Started_Dust_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buffing Started Dust Collection System?</label>
    <type>Checkbox</type>
</CustomField>