force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Station_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Station_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buffing Station Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>