force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Technician__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buffing Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>