force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Technician_Name__c</fullName>
    <formula>ETT_Buffing_Station_Work_Schedule__r.ETT_Technician__r.FirstName + &quot; &quot; +  ETT_Buffing_Station_Work_Schedule__r.ETT_Technician__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buffing Technician Name</label>
    <type>Text</type>
</CustomField>