force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Buffing_Technician_Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Buffing_Technician_Rejection_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Technician  Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>