force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Building_Rejection_Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Building_Rejection_Manager_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Rejection Manager Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>