force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Building_Start_Time_new__c.field-meta.xml
<CustomField>
    <fullName>ETT_Building_Start_Time_new__c</fullName>
    <label>Building Start Time</label>
    <summarizedField>ETT_Job_Card_Line_Item__c.ETT_Overall_Start_time__c</summarizedField>
    <summaryFilterItems>
        <field>ETT_Job_Card_Line_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Building</value>
    </summaryFilterItems>
    <summaryForeignKey>ETT_Job_Card_Line_Item__c.ETT_Job_Card__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>