force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Building_technician__c.field-meta.xml
<CustomField>
    <fullName>ETT_Building_technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards5</relationshipName>
    <type>Lookup</type>
</CustomField>