force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Building_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Building_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards (Building Work Schedule)</relationshipLabel>
    <relationshipName>Job_Cards4</relationshipName>
    <type>Lookup</type>
</CustomField>