force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Cemented_Least_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cemented_Least_Available_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cementing Least Available Time</label>
    <type>DateTime</type>
</CustomField>