force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Cementing_technician__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cementing_technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cementing technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Cards6</relationshipName>
    <type>Lookup</type>
</CustomField>