force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Cementing_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cementing_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cementing Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards (Cementing Work Schedule)</relationshipLabel>
    <relationshipName>Job_Cards6</relationshipName>
    <type>Lookup</type>
</CustomField>