force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Curing_Round_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Round_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing_Round_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>