force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Curing_Technician_Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Technician_Rejection_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Technician Rejection Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>