force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Curing_Temperature__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Temperature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Temperature</label>
    <length>200</length>
    <type>Text</type>
</CustomField>