force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Curing_Valve_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Valve_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Valve Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>