force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Curing_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ETT_Curing_Work_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curing Work Schedule</label>
    <referenceTo>ETT_Work_Schedule__c</referenceTo>
    <relationshipLabel>Job Cards (Curing Work Schedule)</relationshipLabel>
    <relationshipName>Job_Cards8</relationshipName>
    <type>Lookup</type>
</CustomField>