force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_Identified_Final_Inspection__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_Identified_Final_Inspection__c</fullName>
    <label>Defect(s) Identified On Final Inspection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re Buffing</fullName>
            </value>
            <value>
                <fullName>Spot Curing</fullName>
            </value>
            <value>
                <fullName>Inner Liner Separation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>