force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Building__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Building__c</fullName>
    <label>Defect(s) Identified On Building</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improper One Side Filling</fullName>
            </value>
            <value>
                <fullName>Missing Skiving Spot</fullName>
            </value>
            <value>
                <fullName>Nail Hole Missing</fullName>
            </value>
            <value>
                <fullName>Length, Tread Pattern &amp; Width mismatch</fullName>
            </value>
            <value>
                <fullName>Nail Hole Visible With Air Bubble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>