force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Cementing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Cementing__c</fullName>
    <label>Defect(s) Identified On Cementing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patch Missing</fullName>
            </value>
            <value>
                <fullName>Patch Air</fullName>
            </value>
            <value>
                <fullName>Rust Not Clear</fullName>
            </value>
            <value>
                <fullName>Crack Missing</fullName>
            </value>
            <value>
                <fullName>Steel Not Remove</fullName>
            </value>
            <value>
                <fullName>Missing Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>