force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Curing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Curing__c</fullName>
    <label>Defect(s) Identified On Curing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envelope &amp; Tube Leaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>