force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Filling__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Filling__c</fullName>
    <label>Defect(s) Identified On Filling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improper Cement solution Coating</fullName>
            </value>
            <value>
                <fullName>Nail Hole Missing</fullName>
            </value>
            <value>
                <fullName>Crack on Sidewall Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>