force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Painting__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Painting__c</fullName>
    <label>Defect(s) Identified On Painting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crack Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>