force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_QualityCtrl__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_QualityCtrl__c</fullName>
    <label>Defects Identified On Quality Ctrl</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re Buffing</fullName>
            </value>
            <value>
                <fullName>Spot Curing</fullName>
            </value>
            <value>
                <fullName>Inner Liner Separation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>