force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Defect_s_Identified_On_Rimming_Env__c.field-meta.xml
<CustomField>
    <fullName>ETT_Defect_s_Identified_On_Rimming_Env__c</fullName>
    <label>Defect(s) Identified On Rimming&amp;Env</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improper Tread stitching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>