force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Failed_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>