force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Filling_Acceptance_Decision__c.field-meta.xml
<CustomField>
    <fullName>ETT_Filling_Acceptance_Decision__c</fullName>
    <formula>IF(AND(ISPICKVAL(ETT_Filling_Status__c,&quot;Accepted&quot;),ISNULL(ETT_Building_Start_Time_new__c) ,ETT_Filling_Max_Available_Time__c&gt;NOW()),&apos;Re-Filling Required&apos;,IF(ISPICKVAL(ETT_Filling_Status__c,&quot;Accepted&quot;),&apos;Filling Accepted&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filling Acceptance Decision</label>
    <type>Text</type>
</CustomField>