force-app/main/default/objects/ETT_Job_Card__c/fields/ETT_Filling_Max_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Filling_Max_Available_Time__c</fullName>
    <formula>IF(NOT(ISNULL(ETT_Filling_End_Time_new__c)),(ETT_Filling_End_Time_new__c+(12/24)),null)</formula>
    <label>Filling Max Available Time</label>
    <type>DateTime</type>
</CustomField>